+ Added Images to Buttons + Added Titles and images to individual activities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,17 +12,19 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MoneyActivity"/>
-        <activity android:name=".HousingActivity"/>
-        <activity android:name=".CommunicationActivity"/>
-        <activity android:name=".EmploymentActivity"/>
+        <activity android:name=".MoneyActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".HousingActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".CommunicationActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".EmploymentActivity" android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
